# gaming

./: CMakeLists.txt  LICENSE.txt  Makefile  gensphere.py  genworld.py
include/sunset/: backend.h  camera.h  controller.h  crypto.h  drm.h  ecs.h  event_queue.h  fbx.h  geometry.h  glfw_provider.h  globals.h  image.h  io_provider.h  octree.h  opengl_backend.h  params.h  physics.h  property_tree.h  rendering.h  rman.h  utils.h
src/: anim.cpp  backend.cpp  camera.cpp  config.h  controller.cpp  crypto.cpp  drm.cpp  ecs.cpp  event_queue.cpp  geometry.cpp  globals.cpp  image.cpp  io_provider.cpp  main.cpp  opengl_backend.cpp  physics.cpp  property_tree.cpp  psf2.cpp  rendering.cpp  rman.cpp  utils.cpp
tests/: test_property_tree.cpp
tools/: clang-format.sh  fbx2pt.py  pt.py  ptasm.py  ptdump.py
